--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -275,6 +275,15 @@ bt {
 		height: inherit;
 	}
 	
+	.navbar-brand .large {
+		display: none;
+	}
+}
+
+@media (min-width: 750px) {
+	.navbar-brand .small {
+		display: none;
+	}
 }
 
 @media (max-width: 560px) {
@@ -326,4 +335,17 @@ textarea {
     background: white;
     cursor: inherit;
     display: block;
+}
+
+.navbar {
+	height: 68px;
+	background-color: #63B8FF;
+}
+
+.navbar-brand img {
+	display: inline;
+}
+
+.navbar-brand .small {
+	padding-top: 20px;
 }
