--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5758,8 +5758,8 @@ button.close {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("../fonts/fontawesome-webfont.eot?v=4.5.0");
-  src: url("../fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("../fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("../fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("../fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("../fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
+  src: url("//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts/fontawesome-webfont.eot?v=4.5.0");
+  src: url("//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal; }
 
@@ -7980,9 +7980,14 @@ hr {
   .navbar-brand .large {
     display: none; } }
 
+.navbar-nav {
+  margin: 0px; }
+
 @media (min-width: 750px) {
   .navbar-brand .small {
-    display: none; } }
+    display: none; }
+  .navbar-nav > li {
+    margin-top: 6px; } }
 
 @media (max-width: 560px) {
   .adminTable .noWrap {
@@ -8032,23 +8037,20 @@ textarea {
   background-color: #63B8FF; }
 
 .navbar-brand .small {
-  padding-top: 5px;
-}
+  padding-top: 5px; }
 
 .navbar-brand {
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
   left: 50%;
-  position: absolute;
-}
+  position: absolute; }
 
-.navbar-collapse {
+.navbar-default .navbar-collapse {
   background-color: #63B8FF;
-  border-color: #63B8FF;
-}
+  border-color: #63B8FF; }
 
-.nav li a {
+.navbar-default .navbar-nav > li > a {
   font-size: 25px;
-}
+  color: white; }
 
 /*# sourceMappingURL=app.css.map */
