--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -53,11 +53,8 @@ p {
 }
 
 .col-counter {
-  width: 30%;
   padding-top: 10px;
-  padding-bottom: 10px;
   margin-top: 0;
-  margin-bottom: 0;
 }
 
 /* Links */
@@ -133,12 +130,12 @@ hr {
 }
 
 /* +++++ WRAP SECTIONS +++++ */
-
-#header {
-  padding-top: 130px;
-  padding-bottom: 70px;
-  background-color: #f2f2f2;
-}
+// tpdo: fix or remove
+// #header {
+//   padding-top: 130px;
+//   padding-bottom: 70px;
+//   background-color: #f2f2f2;
+// }
 
 @media (max-width: 750px) {
   #header {
@@ -148,8 +145,7 @@ hr {
 
 #footer {
   background-color: #2f2f2f;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px;
 }
 
 #footer p {
@@ -189,50 +185,6 @@ hr {
 
 .myBlock {
   display: inline-block;
-}
-
-@media (max-width: 750px) {
-  .welcomeFix {
-    padding-top: 70px
-  }
-
-  .adminTable button {
-    padding: 1px 5px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-  }
-
-  .adminTable .panel-title {
-    height: inherit;
-  }
-
-  .navbar-brand .large {
-    display: none;
-  }
-}
-
-.navbar-nav {
-  margin: 0px;
-}
-
-@media (min-width: 750px) {
-  .navbar-brand .small {
-    display: none;
-  }
-  .navbar-nav > li {
-    margin-top: 6px;
-  }
-}
-
-@media (max-width: 560px) {
-  .adminTable .noWrap {
-    width: 100%;
-    margin-bottom: 15px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    border: 1px solid #dddddd;
-  }
 }
 
 #admin {
@@ -278,12 +230,8 @@ textarea {
 }
 
 .navbar {
-  height: 90px;
   background-color: $brand-primary;
-}
-
-.navbar-brand .small {
-  padding-top: 35px;
+  margin: 0;
 }
 
 .navbar-brand {
@@ -305,4 +253,74 @@ textarea {
 
 .navbar-nav {
   margin-top: 12px;
+}
+
+.navbar-brand .small {
+  padding-top: 17px;
+}
+
+@media (max-width: 750px) {
+  .adminTable button {
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+  }
+
+  .adminTable .panel-title {
+    height: inherit;
+  }
+
+  .navbar-brand .large {
+    display: none;
+  }
+  
+  .container {
+    padding-top: 0;
+  }
+  
+  .navbar-left {
+    margin-bottom: 0;
+  }
+  
+  .navbar-right {
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 750px) {
+  .navbar-brand .small {
+    display: none;
+  }
+  .navbar-nav > li {
+    margin-top: 6px;
+  }
+  
+  .container {
+    padding-top: 70px;
+    padding-bottom: 60px;
+  }
+  
+  .navbar {
+    height: 90px;
+  }
+}
+
+@media (max-width: 560px) {
+  .adminTable .noWrap {
+    width: 100%;
+    margin-bottom: 15px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    border: 1px solid #dddddd;
+  }
+}
+
+#suggest {
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+
+.enable {
+  margin-top: 15px;
 }
