--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,9 +1,15 @@
 $font-family-sans-serif: 'Lato', sans-serif;
 $brand-primary: #63B8FF;
 $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.5.0/fonts";
+$footer-height: 350px;
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 body {
   background-color: #f2f2f2;
@@ -129,14 +135,6 @@ hr {
   padding-bottom: 50px;
 }
 
-/* +++++ WRAP SECTIONS +++++ */
-// tpdo: fix or remove
-// #header {
-//   padding-top: 130px;
-//   padding-bottom: 70px;
-//   background-color: #f2f2f2;
-// }
-
 @media (max-width: 750px) {
   #header {
     padding-top: 50px;
@@ -144,6 +142,8 @@ hr {
 }
 
 #footer {
+  bottom: 0;
+  width: 100%;
   background-color: #2f2f2f;
   padding: 50px;
 }
@@ -304,6 +304,11 @@ textarea {
   .navbar {
     height: 90px;
   }
+  
+  #navbar-brand-centered {
+    padding-left: 20%;
+    padding-right: 20%;
+  }
 }
 
 @media (max-width: 560px) {
@@ -327,4 +332,34 @@ textarea {
 
 .panel-heading .myBlock {
   color: white;
+}
+
+#navbar-brand-centered {
+  padding-left: 20%;
+  padding-right: 20%;
+}
+
+@media (max-width: 1240px) {
+  #navbar-brand-centered {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+
+@media (min-width: 1240px) {
+  body {
+    margin-bottom: $footer-height;
+  }
+  
+  #footer {
+    position: absolute;
+    height: $footer-height;
+  }
+}
+
+#cookie {
+  margin: 25px;
+  position: fixed;
+  bottom: 0px;
+  z-index: 9999;
 }
