--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -368,3 +368,27 @@ textarea {
   margin-top: 5px;
   margin-bottom: 5px;
 }
+
+.votingDisabled {
+  margin-top: 10px;
+}
+
+.instagram:hover {
+  color: #125688;
+}
+
+.youtube:hover {
+  color: #b00;
+}
+
+.googlePlus:hover {
+  color: #dd4b39;
+}
+
+.facebook:hover {
+  color: #3b5998;
+}
+
+.twitter:hover {
+  color: #55acee;
+}
